reinstall gitHub Pages

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "^9.0.7",
+    "gh-pages": "^6.1.1",
     "maath": "^0.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,5 +38,4 @@
     "type": "git",
     "url": "git+https://github.com/oussama2505/3D_Portafolio.git"
   }
-  
 }
