--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@react-three/fiber": "^8.11.1",
     "framer-motion": "^9.0.7",
     "gh-pages": "^6.1.1",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "maath": "^0.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.8.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
