--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.56.24",
     "@react-three/fiber": "^8.11.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^9.0.7",
     "gh-pages": "^6.1.1",
     "i18next": "^23.11.5",
